--- a/src/components/reusable/productCard/productCard.module.scss
+++ b/src/components/reusable/productCard/productCard.module.scss
@@ -1,4 +1,4 @@
-@import '../../styles/defaultImports.scss';
+@import '../../../styles/defaultImports.scss';
 
 $product-btn-brdr: 1px solid rgb(231, 231, 231);
 
