--- a/src/styles/4-components/_4-components.scss
+++ b/src/styles/4-components/_4-components.scss
@@ -1,4 +1,2 @@
 /*Very simple styles that can be inserted anywhere on the page */
-@import './cart-item',
-'./item-quantity',
-'./contact-form';
+@import './contact-form';
