--- a/src/styles/4-components/_contact-form.scss
+++ b/src/styles/4-components/_contact-form.scss
@@ -4,7 +4,7 @@ $checkout-contact-color: black;
 $checkout-contact-row-brdr: 5px;
 
 .contact-form__wrapper {
-    padding: 0 15px;
+    padding: 10px 15px;
     background: $checkout-contact-bg-color;
     border-radius: 6px;
     box-shadow: $d-box-shadow;
