--- a/src/styles/6-pages/_categories.scss
+++ b/src/styles/6-pages/_categories.scss
@@ -38,3 +38,21 @@
         font-size: 20px;
     }
 }
+
+.jumbo__back-arrow {
+    position: absolute;
+    top: 35%;
+    left: -50px;
+    font-size: 40px;
+
+    @include mq('med') {
+        top: 40%;
+        left: -80px;
+        font-size: 50px;
+    }
+}
+
+.jumbo__sub-content {
+    display: inline-block;
+    position: relative;
+}
