--- a/src/styles/4-components/_4-components.scss
+++ b/src/styles/4-components/_4-components.scss
@@ -1,2 +1,3 @@
 /*Very simple styles that can be inserted anywhere on the page */
-@import './contact-form';
+@import './contact-form',
+'./flash-message';
