--- a/src/styles/4-components/_4-components.scss
+++ b/src/styles/4-components/_4-components.scss
@@ -1,3 +1,4 @@
 /*Very simple styles that can be inserted anywhere on the page */
 @import './contact-form',
-'./flash-message';
+'./flash-message',
+'./address-modal';
