--- a/src/styles/6-pages/_confirmation.scss
+++ b/src/styles/6-pages/_confirmation.scss
@@ -26,7 +26,7 @@
         @extend .btn;
         @extend .btn-lg;
         @extend .btn-dark;
-        display: block;
+        display: inline-block;
         margin: 0 auto;
     }
 
